add icon and md, rename android project

--- a/android-virtual-pen/app/src/main/res/values/strings.xml
+++ b/android-virtual-pen/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">android-pen-input</string>
+    <string name="app_name">Android Virtual Pen</string>
 </resources>
