update todo and README.md

--- a/todo.org
+++ b/todo.org
@@ -7,5 +7,5 @@
 *** DONE Allow to set pressure sensitivity
 *** DONE Allow to save device settings
 *** TODO Add tilt support
-*** TODO Add eraser support
-*** TODO Addresse on-off stroke issue
+*** DONE Add eraser support
+
